--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,37 +3,46 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- main
+  - main
 
 resources:
-- repo: self
+  - repo: self
 
 variables:
   # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '663408ef-b672-4c28-abbe-467ea0e48817'
-  imageRepository: 'fiakurtssonpipelinesjavascriptdocker'
-  containerRegistry: 'mynewcontainerregistry20241218.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/app/Dockerfile'
-  tag: '$(Build.BuildId)'
+  azureSubscription: "Azure subscription 1"
+  appName: "<Name of the Web App>"
+  dockerRegistryServiceConnection: "663408ef-b672-4c28-abbe-467ea0e48817"
+  imageRepository: "fiakurtssonpipelinesjavascriptdocker"
+  containerRegistry: "mynewcontainerregistry20241218.azurecr.io"
+  dockerfilePath: "$(Build.SourcesDirectory)/app/Dockerfile"
+  tag: "$(Build.BuildId)"
 
   # Agent VM image name
-  vmImageName: 'ubuntu-latest'
+  vmImageName: "ubuntu-latest"
 
 stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+  - stage: Build
+    displayName: Build and push stage
+    jobs:
+      - job: Build
+        displayName: Build
+        pool:
+          vmImage: $(vmImageName)
+        steps:
+          - task: Docker@2
+            displayName: Build and push an image to container registry
+            inputs:
+              command: buildAndPush
+              repository: $(imageRepository)
+              dockerfile: $(dockerfilePath)
+              containerRegistry: $(dockerRegistryServiceConnection)
+              tags: |
+                $(tag)
+          ## Add the below snippet at the end of your pipeline
+          - task: AzureWebAppContainer@1
+            displayName: "Azure Web App on Container Deploy"
+            inputs:
+              azureSubscription: $(azureSubscription)
+              appName: $(appName)
+              containers: $(containerRegistry)/$(imageRepository):$(tag)
