--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   azureSubscription: "Azure subscription 1"
-  appName: "<Name of the Web App>"
-  dockerRegistryServiceConnection: "93b83f2a-ad7e-468c-8a35-23fbddfe7fe6"
+  appName: "fias-webbapp-20241218"
+  dockerRegistryServiceConnection: "bfcd139a-66c4-47e4-9934-7d77b6e633fd"
   imageRepository: "fiakurtssonpipelinesjavascriptdocker"
   containerRegistry: "mynewcontainerregistry20241218"
   dockerfilePath: "$(Build.SourcesDirectory)/app/Dockerfile"
